Implement budget management functionality with event listener for spending amounts

--- a/budgetManager/manifest.json
+++ b/budgetManager/manifest.json
@@ -5,5 +5,8 @@
     "description": "A simple budget management extension",
     "action": {
         "default_popup": "budget.html"
-    }
+    },
+    "permissions": [
+        "storage"
+    ]
 }
