--- a/budgetManager/manifest.json
+++ b/budgetManager/manifest.json
@@ -7,7 +7,8 @@
         "default_popup": "budget.html"
     },
     "permissions": [
-        "storage"
+        "storage",
+        "notifications"
     ],
     "options_page": "options.html"
 }
